# chicago-whats-banned-on-your-block

./: .gitignore  CLAUDE.md  LICENSE  README.md  about.html  index.html  package-lock.json  package.json  pyproject.toml  validation_report.json  vitest.config.js
.github/workflows/: ci.yml
cleaned/: cleaned_business.json  cleaned_downtown.json  cleaned_manufacturing.json  cleaned_residential.json
css/: style.css
data/: transit-stations.json  use-table.json
js/: adu-ward-data.js  adu.js  app.js  build-act.js  cco.js  config.js.example  geocode.js  map.js  spatial.js  use-table.js
raw/: raw_business.csv  raw_manufacturing.csv  raw_residential.csv
scripts/: 01_fetch_ordinance.py  03_curate_and_merge.py  04_validate.py  05_build_transit_stations.py  06_fetch_zoning_geojson.py  07_build_zoning_tiles.sh  constants.py
tests/: conftest.py  test_curate_and_merge.py  test_fetch_ordinance.py  test_pipeline_integration.py  test_validate.py
tests/fixtures/: cleaned_business_fixture.json  sample_use_table.html
tests/js/: adu.test.js  build-act.test.js  cco.test.js  geocode.test.js  spatial.test.js  use-table.test.js
