[project]
name = "use-table-reform"
version = "0.1.0"
description = "Chicago zoning use table extraction pipeline"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "lxml>=5.1.0",
    "html5lib>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "responses>=0.25.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
